--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.7.7",
     "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.1.1",
     "@angular/common": "^17.1.0",
