--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build Angular app
         run: npm run build
 
+      - name: Copy index.html to 404.html
+        run: cp dist/etf-frontend/browser/index.html dist/etf-frontend/browser/404.html
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
